Ignore errors on SetDoNotFragment on platforms where it is not implemented.

BUG=641709
R=ianswett@chromium.org, jri@chromium.org

Review URL: https://codereview.chromium.org/2287073002 .

Cr-Commit-Position: refs/heads/master@{#415037}

Former-commit-id: 8449205b62b9278cb76710b9bbbb06e7a7c07077